--- a/과학과제연구/HTML.html
+++ b/과학과제연구/HTML.html
@@ -98,10 +98,10 @@ h3 {
 </head>
 
 <body>
-<h1 style="text-align:center; margin-bottom: 0px;"><a href="Programing.html" style="font-size:45px">HTML</a></h1>
+<h1 style="text-align:center; margin-bottom: 0px;"><a href="index.html" style="font-size:45px">HTML</a></h1>
   <div class="sidebar">
     <ul>
-      <h2><a href="Programing.html" style="color:white">HOME</a></h2>
+      <h2><a href="index.html" style="color:white">HOME</a></h2>
       <h2><a href="C.html" style="color:white">C</a></h2>
       <h2><a href="C++.html" style="color:white">C++</a></h2>
       <h2><a href="python.html" style="color:white">Python</a></h2>
